2015-08-11  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Rest/Configs.pm: Allow 'expand_*' in query parameter
	* perl/Amanda/Rest/Dles.pm: Allow 'expand_*' in query parameter
	* installcheck/Amanda_Rest_Configs.pl: Fix installcheck

2015-08-11  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Use 'eq' instead of '==' for filename

2015-08-11  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amcryptsimple.pl, common-src/amgpgcrypt.pl: Add sleep to
	  allow gpg-agent to exit
	* server-src/amrestore.pl: Add a --continue-on-filter-error option
	* man/xml-source/amrestore.8.xml: Document --continue-on-filter-error

2015-08-11  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Rest/Configs.pm (_fields): Must not load the config.

2015-08-10  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amrestore.8.xml: Document that -r do not decrypt dump

2015-08-10  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report/human.pm: Fix compression computation.

2015-08-10  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report/human.pm: Fix compression computation.

2015-08-07  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Rest_Configs.pl: Take MAILER form config

2015-08-07  Jean-Louis Martineau <martineau@zmanda.com>
	* rest-server/bin/app.pl.in: Undo bad change.

2015-08-07  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Rest/Configs.pm: Typo.
	* installcheck/Amanda_Rest_Configs.pl: Fix check.

2015-08-07  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c, common-src/amanda.h, common-src/match.c,
	  common-src/security-util.c, server-src/driver.c,
	  server-src/dumper.c: Coverity cleanup.

2015-08-07  Jean-Louis Martineau <martineau@zmanda.com>
	* rest-server/bin/app.pl.in, rest-server/lib/Amanda/Rest.pm.in:
	  Remove 'use Amanda::Rest::Changers;'

2015-08-07  Jean-Louis Martineau <martineau@zmanda.com>